--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,37 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.5
+  flutter_bloc: ^8.1.3
+  firebasecore: ^1.10.0
+  firebase_auth: ^3.1.1
+  cloud_firestore: ^2.5.3
+  firebase_storage: ^10.0.5
+  image_picker: ^0.8.4+4
+  firebase_messaging: ^10.0.9
+  flutter_local_notifications: ^9.1.5
+  fluttertoast: ^8.0.8
+  flutter_spinkit: ^5.1.0
+  flutter_svg: ^0.22.0
+  google_sign_in: ^5.2.1
+  flutter_facebook_auth: ^4.0.0
+  flutter_twitter_login: ^4.0.0
+  flutter_signin_button: ^2.0.0
+  flutter_facebook_login: ^4.0.0
+  flutter_twitter: ^2.0.0
+  equatable: ^2.0.3
+  email_validator: ^2.0.1
+  intl: ^0.17.0
+  flutter_datetime_picker: ^2.0.0
+  flutter_rating_bar: ^4.0.0
+  flutter_rating_stars: ^0.0.4
+  flutter_rating: ^3.0.1
+  
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.13.0
 
 dev_dependencies:
   flutter_test:
