--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   provider: 
   flutter_bloc: 
+  cloud_firestore:
   firebase_auth: 
   image_picker: 
   flutter_local_notifications: 
