--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   provider: 
-  flutter_bloc: 
-  firebase_auth: 
+  flutter_bloc: ^8.1.3 
+  firebase_auth: ^4.6.1 
   image_picker: 
   flutter_local_notifications: 
   fluttertoast: 
@@ -52,7 +52,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: 
+  firebase_core: ^2.13.0 
+  cloud_firestore: ^4.7.1
 
 dev_dependencies:
   flutter_test:
