--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: 
-  flutter_bloc: 
+  flutter_bloc: ^8.1.3 
   cloud_firestore:
   firebase_auth: ^4.6.1 
   image_picker: 
