--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   provider: 
   flutter_bloc: ^8.1.3 
-  cloud_firestore:
+  cloud_firestore: ^4.8.0
   firebase_auth: ^4.6.1 
   image_picker: 
   flutter_local_notifications: 
@@ -53,7 +53,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: 
+  firebase_core: ^2.13.1 
 
 dev_dependencies:
   flutter_test:
@@ -79,8 +79,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/Ventoo.png
-    - assets/ventooV.png
+    - assets/images/Ventoo.png
+    - assets/images/ventooV.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
