--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_bloc: ^8.1.3 
   cloud_firestore: ^4.8.0
   firebase_auth: ^4.6.1 
+  cached_network_image: ^3.2.3
   image_picker: 
   flutter_local_notifications: 
   fluttertoast: 
