--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,21 +35,12 @@ dependencies:
   cloud_firestore: ^4.8.0
   firebase_auth: ^4.6.1 
   cached_network_image: ^3.2.3
-  image_picker: 
-  flutter_local_notifications: 
-  fluttertoast: 
-  flutter_spinkit: 
-  flutter_svg: 
-  google_sign_in: 
-  flutter_facebook_auth: 
-  flutter_signin_button: 
-  equatable: 
-  email_validator:
-  intl: 
-  flutter_rating_bar: 
+  bloc_test: ^9.1.3
+  mockito: ^5.4.1
   cupertino_icons: ^1.0.2
   firebase_core: ^2.13.1 
   emoji_picker_flutter: ^1.6.0
+  image_picker: ^0.8.7+5
 
 dev_dependencies:
   flutter_test:
