--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.13.1 
   emoji_picker_flutter: ^1.6.0
+  flutter_notification_channel: ^2.0.0
 
 dev_dependencies:
   flutter_test:
