--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,19 +34,7 @@ dependencies:
   flutter_bloc: ^8.1.3 
   cloud_firestore: ^4.8.0
   firebase_auth: ^4.6.1 
-  cached_network_image: ^3.2.3
-  image_picker: 
-  flutter_local_notifications: 
-  fluttertoast: 
-  flutter_spinkit: 
-  flutter_svg: 
-  google_sign_in: 
-  flutter_facebook_auth: 
-  flutter_signin_button: 
-  equatable: 
-  email_validator:
-  intl: 
-  flutter_rating_bar: 
+  cached_network_image: ^3.2.3 
   cupertino_icons: ^1.0.2
   firebase_core: ^2.13.1 
 
@@ -76,7 +64,7 @@ flutter:
   assets:
     - assets/images/Ventoo.png
     - assets/images/ventooV.png
-  #   - images/a_dot_ham.jpeg
+    - assets/images/userIcon.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
