--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cached_network_image: ^3.2.3 
   cupertino_icons: ^1.0.2
   firebase_core: ^2.13.1 
+  emoji_picker_flutter: ^1.6.0
+  image_picker: ^0.8.7+5
+  firebase_storage: ^11.2.2
 
 dev_dependencies:
   flutter_test:
