--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   emoji_picker_flutter: ^1.6.0
   image_picker: ^0.8.7+5
   firebase_storage: ^11.2.2
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
