--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   image_picker: ^0.8.7+5
   firebase_storage: ^11.2.2
   fluttertoast: ^8.2.2
+  golden_toolkit: ^0.15.0
+  mockito: ^5.4.1
 
 dev_dependencies:
   flutter_test:
